# SQLAlchemy_attempts

./: config.ini  myselect.py  pyproject.toml
conf/: __init__.py  db.py  models.py
migrations/versions/: 9ad4a9317b70_init.py
seeds/: seed.py
